# slk_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.cpp  client.h  main.cpp  message.cpp  message.h  messagefactory.cpp  messagefactory.h  messageparser.cpp  messageparser.h  protocol.h  room.cpp  room.h  server.cpp  server.h
API/: CMakeLists.txt  apihandler.cpp  apihandler.h
configuration/: CMakeLists.txt  configurationcontroller.cpp  configurationcontroller.h
database/: CMakeLists.txt  database.cpp  database.h  databasecontroller.cpp  databasecontroller.h  databasesettings.cpp  databasesettings.h  roomdata.cpp  roomdata.h  typealiases.h  userdata.cpp  userdata.h  validators.cpp  validators.h
server/: CMakeLists.txt  client.cpp  client.h  messagefactory.h  messageparser.cpp  messageparser.h  protocol.h  room.cpp  room.h  server.cpp  server.h
tests/: CMakeLists.txt  main.cpp
tests/database/: CMakeLists.txt  roomstest.cpp  roomstest.h  userstest.cpp  userstest.h
utils/: CMakeLists.txt  hash.cpp  hash.h  pimpl.h  print.h  utils.h
